--- a/templates/turismo_subventana.html
+++ b/templates/turismo_subventana.html
@@ -90,7 +90,7 @@
 <body>
     <div class="container">
         <h1>Selecciona una opción para Turismo</h1>
-        <a href="/turismo-ecuador"><button>Turismo Ecuador</button></a>
+        <a href="/turismo"><button>Turismo</button></a>
         <a href="/ecuador-420"><button>Ecuador 420</button></a>
         <br>
         <!-- Botón para regresar a la ventana principal -->
